--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,9 +16,9 @@ android {
         applicationId "com.kl3jvi.animity"
         minSdk 21
         targetSdk 31
-        versionCode 2
+        versionCode 3
         versionName "1.0.1"
-
+        archivesBaseName = "Animity-v$versionName"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -27,11 +27,6 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             debuggable false
-        }
-    }
-    applicationVariants.all{ variant->
-        variant.outputs.forEach{ output->
-            output.outputFileName.replace("app","animity")
         }
 
     }
