--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,18 +1,31 @@
-name: run ktlint
+name: Android CI
 
 on:
   push:
-    branches: [kotlin_app] # Just in case main was not up to date while merging PR
+    branches: [ kotlin_app ]
   pull_request:
-    types: [opened, synchronize]
-    
+    branches: [ kotlin_app ]
+
 jobs:
-  
-  ktlint:
-    name: Check Code Quality
+  build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: Kotlin Linter
-        uses: vroy/gha-kotlin-linter@v3
-        
+    - uses: actions/checkout@v2
+    - name: set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
+        cache: gradle
+    - name: Kotlint
+      uses: TheFabbiusCorp/gha-kotlin-linter@v1.1
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      run: ./gradlew build
+    - uses: actions/upload-artifact@v2
+      with:
+        name: demo-apk
+        path: app/build/outputs/apk/release/app-release.apk
