--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: app
-        path: app/build/outputs/apk/debug/https://github.com/kl3jvi/animity/releases/download/v0.0.9/Animity-v1.0.2-x86-release.apk.apk
+        path: app/build/outputs/apk/release/Animity-v1.0.2-x86-release.apk
