--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,9 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew assembleRelease --stacktrace
+      run: ./gradlew clean assembleRelease
     - name: Upload APK
       uses: actions/upload-artifact@v1
       with:
         name: app
-        path: app/build/outputs/apk/release/Animity-v1.0.2-x86-release.apk
+        path: app/build/outputs/apk/**/release/*.apk
